# klados

./: .gitattributes  .gitignore  README.md  child  pressure-test-and-derisk.md  robust-fixes.md  techSpec PRD .md
spikes/: .gitignore  Makefile  README.md
spikes/engine/: demo_auth.sh  demo_diff.sh  demo_flow.sh  demo_s3.sh  demo_usage.sh  klad  kladosd.py  timeline.html  timeline_export.json
spikes/guest/: browser_workload.py  fidelity_workload.py  guest_agent.py  init_browser  init_fidelity  init_protocol  sitecustomize.py
spikes/harness/: fc.py  metrics.py  smoke.py  spike_a.py  spike_b.py  spike_c.py  spike_d_disk.sh  spike_e_clock.py  spike_f_latency.py  spike_g_protocol.py  spike_h_fidelity.py  spike_i_concurrent.py  spike_j_browser.py
spikes/harness/workload/: churn.py
spikes/results/: spike_b_file-cow.json  spike_c.json  spike_c_mitigated.json  spike_c_transparent.json  spike_c_vanilla.json
spikes/sdk/: demo_sdk.py  export_timeline.py
spikes/sdk-ts/: package.json  tsconfig.json
spikes/sdk-ts/src/: demo.ts  klados.ts
spikes/sdk/klados/: __init__.py
spikes/setup/: build_browser_rootfs.sh  check-kvm.sh  install.sh  prep_entropy_rootfs.sh  provision.sh  repack_browser_rootfs.sh
spikes/storage/: cas.py  s3.py  spike_l_dedup.py
spikes/uffd/: Cargo.toml
spikes/uffd/src/: main.rs
